--- a/see more.html
+++ b/see more.html
@@ -17,5 +17,11 @@
         <img src="ecommerce images/fardin.JPG" class="fardin" alt="fardin">
         </div>
     </div>
+
+    <div class="media">
+        <audio controls src="media/ringtone.mp3"></audio>
+        <video controls src="media/animation.mp4"></video>
+    </div>
+    
 </body>
 </html>
